--- a/Sales_System(Coffee)/src/View/Frame2.form
+++ b/Sales_System(Coffee)/src/View/Frame2.form
@@ -158,7 +158,7 @@
                   <Color blue="cc" green="cc" red="cc" type="rgb"/>
                 </Property>
                 <Property name="horizontalAlignment" type="int" value="0"/>
-                <Property name="text" type="java.lang.String" value="COFFEE &quot;NAME&quot;"/>
+                <Property name="text" type="java.lang.String" value="Marseille Cafe"/>
               </Properties>
             </Component>
           </SubComponents>
@@ -205,7 +205,7 @@
               <Color blue="8e" green="a1" red="b3" type="rgb"/>
             </Property>
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="cc" green="cc" red="cc" type="rgb"/>
+              <Color blue="0" green="0" red="0" type="rgb"/>
             </Property>
           </Properties>
         </Component>
@@ -227,7 +227,7 @@
               <Color blue="8e" green="a1" red="b3" type="rgb"/>
             </Property>
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="cc" green="cc" red="cc" type="rgb"/>
+              <Color blue="0" green="0" red="0" type="rgb"/>
             </Property>
           </Properties>
         </Component>
